--- a/chrome-ext/package.json
+++ b/chrome-ext/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/chrome": "^0.1.22",
     "typescript": "~5.9.3",
-    "vite": "^7.1.7"
+    "vite": "^7.1.9"
+  },
+  "dependencies": {
+    "@crxjs/vite-plugin": "^2.2.0",
+    "webextension-polyfill": "^0.12.0"
   }
 }
