--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
   "name": "coolbeans-extension",
   "version": "0.0.1",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "api": "node server.js",
+    "api:mock": "cross-env MOCK_GEMINI=true node server.js",
+    "lint": "echo 'add linter'",
+    "test:api": "cross-env NODE_ENV=test MOCK_GEMINI=true node tests/analyze.test.js"
   },
   "dependencies": {
     "@google/genai": "^1.22.0",
     "@google/generative-ai": "^0.24.1",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -20,6 +26,7 @@
     "@types/chrome": "^0.0.166",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "cross-env": "^10.1.0",
     "typescript": "^5.2.0",
     "vite": "^7.1.9"
   }
